# bootable

./: .gitignore  Cargo.toml  MODERNIZATION.md  README.md  build.rs
.github/workflows/: ci.yml
data/: io.bootable.app.desktop  io.bootable.app.metainfo.xml  resources.gresource.xml
src/: devices.rs  helper.rs  main.rs  util.rs  writer.rs
