[package]
name = "bootable"
version = "0.1.0"
edition = "2024"
description = "Graphical USB image writer for bootable media"
license = "GPL-3.0-only"
repository = "https://github.com/Pingasmaster/bootable"
readme = "README.md"
keywords = ["usb", "boot", "image", "iso", "gui"]
categories = ["filesystem", "gui"]

[dependencies]
gtk = { package = "gtk4", version = "0.11.0-alpha.2", features = ["v4_20"] }
adw = { package = "libadwaita", version = "0.9.0-alpha.0", features = ["v1_8", "gtk_v4_20"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"
tempfile = "3.24.0"
