[package]
name = "bootable"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Graphical USB image writer for bootable media"
license = "GPL-3.0-only"
repository = "https://github.com/Pingasmaster/bootable"
readme = "README.md"
keywords = ["usb", "boot", "image", "iso", "gui"]
categories = ["filesystem", "gui"]

[dependencies]
gtk = { package = "gtk4", version = "0.11.2", features = ["v4_20"] }
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_8", "gtk_v4_20"] }
async-channel = "2.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
tempfile = "3.27.0"
sha2 = "0.10.9"
nix = { version = "0.31", features = ["user"] }
which = "8.0"

[build-dependencies]
glib-build-tools = "0.22"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Curated restriction lints — catches real hazards without the contradictory
# style-preference noise of the full restriction group.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
unimplemented = "deny"
todo = "deny"
indexing_slicing = "deny"
string_slice = "deny"
get_unwrap = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
use_debug = "deny"
mem_forget = "deny"
exit = "deny"
map_err_ignore = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
verbose_file_reads = "deny"
shadow_unrelated = "deny"
shadow_same = "deny"
str_to_string = "deny"
format_push_string = "deny"
try_err = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
if_then_some_else_none = "deny"
empty_drop = "deny"
empty_structs_with_brackets = "deny"
empty_enum_variants_with_brackets = "deny"
fn_to_numeric_cast_any = "deny"
infinite_loop = "deny"
lossy_float_literal = "deny"
mixed_read_write_in_expression = "deny"
multiple_inherent_impl = "deny"
mutex_atomic = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
wildcard_dependencies = "deny"
create_dir = "deny"
filetype_is_file = "deny"
iter_over_hash_type = "deny"
string_add = "deny"
ref_patterns = "deny"
non_zero_suggestions = "deny"
missing_assert_message = "deny"
allow_attributes_without_reason = "deny"
redundant_type_annotations = "deny"
unused_result_ok = "deny"
impl_trait_in_params = "deny"
needless_raw_strings = "deny"
pub_without_shorthand = "deny"
decimal_literal_representation = "deny"
big_endian_bytes = "deny"
error_impl_error = "deny"
semicolon_if_nothing_returned = "deny"
unseparated_literal_suffix = "deny"
field_scoped_visibility_modifiers = "deny"
map_with_unused_argument_over_ranges = "deny"
non_ascii_literal = "deny"
renamed_function_params = "deny"
unused_trait_names = "deny"
